Add admin EPs for file handling
